--- a/cours/index.html
+++ b/cours/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>traitement de données</title>
-    <link rel="stylesheet" href="/cours/style.css">
+    <link rel="stylesheet" href="/styleCours.css">
 </head>
 <body>
+    <div class="loader">
+        <span class="lettre">c</span>
+        <span class="lettre">h</span>
+        <span class="lettre">a</span>
+        <span class="lettre">r</span>
+        <span class="lettre">g</span>
+        <span class="lettre">e</span>
+        <span class="lettre">m</span>
+        <span class="lettre">e</span>
+        <span class="lettre">n</span>
+        <span class="lettre">t</span>
+        <span class="lettre">.</span>
+        <span class="lettre">.</span>
+        <span class="lettre">.</span>
+      </div>
+
     <h3 id="javascript">Javascript</h3> 
     <h3 id="php">php</h3>
     <h3 id="python">python</h3>
@@ -23,6 +39,6 @@
 
 
 
-    <script src="/cours/script.js"></script>
+    <script src="/scriptCours.js"></script>
 </body>
 </html>
